--- a/gtweb.yaml
+++ b/gtweb.yaml
@@ -6,7 +6,7 @@ metadata:
     app: myapp
 spec:
   containers:
-    - image: kkarthee/gtweb:latest
+    - image: kkarthee/gtweb
       name: myapp
       ports:
         - containerPort: 5000
