Added sed entried in jenkins file

--- a/getweb_deploy.yaml
+++ b/getweb_deploy.yaml
@@ -17,6 +17,10 @@ spec:
       containers:
       - name: myapp
         image: kkarthee/gtweb
+        imagePullPolicy: Always
+        env:
+        - name: BUILDTIME
+          value: test
         ports:
         - containerPort: 5000
         resources:
